--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -12,7 +12,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
   cancel-in-progress: true
 
 jobs:
@@ -22,14 +22,24 @@ jobs:
       image: metanorma/metanorma:latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Cache Metanorma assets
-        uses: actions-mn/cache@v1
+        uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Metanorma generate site
-        uses: actions-mn/build-and-publish@main
+        uses: actions-mn/build-and-publish@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           agree-to-terms: true
-          destination: artifact
+
+  deploy:
+    if: ${{ github.ref_name == github.event.repository.default_branch }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
